--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container {
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: white;
 }
 
 .menu {
@@ -21,7 +21,7 @@
     display: inline-flex;
     float: right;
     font-size: 20px;
-    color: gray;
+    color: white;
 }
 
 .menu ul li {
@@ -36,7 +36,7 @@
     top: 5%;
     left: 50px;
     position: relative;
-    color: grey;
+    color: black;
 }
 
 .app_text {
