--- a/style.css
+++ b/style.css
@@ -42,16 +42,26 @@
 .intro {
     width: 100%;
     height: 100%;
-    min-height: 250px;
+    padding-bottom: 0%;
     align-items: center;
     background-color: antiquewhite;
 }
 
 .intro-content {
-    position: relative;
+    position: absolute;
     top: 50%;
+    left: 50%;
     transform: translateY(-50%);
+    transform: translateX(-50%);
     text-align: center;
+    z-index: 1;
+    background-color: black;
+    color: rgb(255, 255, 255);
+}
+
+.intro-background  {
+    width: 100%;
+    height: 100%;
 }
 
 section {
